<resources>
    <string name="app_name">InventStuff</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">Hello,</string>
    <string name="user">Deni Hidayat</string>
    <string name="txtheadingappbar">Selamat datang di aplikasi InventStuff!</string>
    <string name="searchItem">Cari data ruangan...</string>
    <string name="txt_room_name">Nama Ruangan</string>
    <string name="txt_room_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="txtHeadingPhotoRoom">Foto ruangan</string>
    <string name="txtHeadingRoomName">Nama Ruangan</string>
    <string name="txtHeadingRoomDescription">Deskripsi Ruangan</string>
    <string name="txtRoomDescription">Tuliskan detail deskripsi ruangan disini...</string>
    <string name="txt_button_camera">Kamera</string>
    <string name="txt_button_gallery">Gallery</string>
    <string name="txt_button_add">Tambahkan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textHeadingInventoryItem">Data Inventaris Barang</string>
    <string name="txtItemCode">Kode Barang</string>
    <string name="textItemName">Nama Barang : Example</string>
    <string name="textItemStock">Stock : Example</string>
    <string name="textItemPrice">Harga : Example</string>
    <string name="stock_format">Stok: %1$d</string>
    <string name="kdItem_format">KD BRG0%1$d</string>
    <string name="price_format">Harga: %1$s</string>
    <string name="total_format">%1$s</string>
    <string name="txtHeadingPhotoInventoryItem">Foto Barang</string>
    <string name="txtHeadingInventoryName">Nama Barang</string>
    <string name="txtHeadingInventoryStock">Stock Barang</string>
    <string name="txtHeadingInventoryPrice">Harga Barang</string>
    <string name="txtHeadingInventoryItemCode">Kode Barang</string>
    <string name="item_code">BRG%s</string>
    <string name="txt_button_save">Simpan Perubahan</string>
    <string name="txtDetailInventoryItem">Detail Inventaris Barang</string>
    <string name="textInventoryCode">Kode Barang</string>
    <string name="txtInventoryItem">Nama Barang</string>
    <string name="textInventoryStock">Stok Barang</string>
    <string name="txtInventoryStock">0</string>
    <string name="textInventoryPrice">Harga(s)</string>
    <string name="txtInventoryPrice">Rp. 1.000.000</string>
    <string name="textInventoryTotal">Total Harga(s)</string>
    <string name="searchItemInventory">Cari data inventaris barang..</string>
    <string name="title_room">Ruangan</string>
    <string name="title_recapitulation">Rekapitulasi</string>
    <string name="title_profile">Profile</string>
    <string name="totalItem">Total Barang</string>
    <string name="totalItemCount">100</string>
    <string name="totalAsset">Total Aset</string>
    <string name="txtAppBarRecapitulation">Data Rekapitulasi</string>
    <string name="txtAppBarInputRoom">Input Data Ruangan</string>
    <string name="txtAppBarEditInventory">Edit Data Barang</string>
    <string name="txtAppBarInputInventory">Input Data Barang</string>
</resources>