<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ppm.inventstuff.ui.room.RoomFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_room" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ppm.inventstuff.ui.recapitulation.RekapitulasiFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_rekapitulasi" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ppm.inventstuff.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>