<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.room.RoomInputActivity">



    <ImageView
        android:id="@+id/iv_detailInventoryItemPhoto"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/txtDetailInventoryItem"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detailInventoryItemPhoto" />

    <TextView
        android:id="@+id/tvInventoryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/kdItem_format"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvInventoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtInventoryItem"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/tvInventoryCode"
        app:layout_constraintTop_toBottomOf="@+id/tvInventoryCode" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/horizontal_dotted"
        android:layerType="software"
        app:layout_constraintTop_toBottomOf="@id/tvInventoryName"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/textInventoryStock"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvInventoryCode"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tvInventoryStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtInventoryStock"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvInventoryCode"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/horizontal_dotted"
        android:layerType="software"
        app:layout_constraintTop_toBottomOf="@id/tvInventoryStock"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/textInventoryPrice"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvInventoryCode"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tvInventoryPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtInventoryPrice"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvInventoryCode"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/textInventoryTotal"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/tvInventoryTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtInventoryPrice"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/horizontal_dotted"
        android:layerType="software"
        app:layout_constraintTop_toBottomOf="@id/tvInventoryPrice"
        tools:layout_editor_absoluteX="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />


</androidx.constraintlayout.widget.ConstraintLayout>