<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.room.RoomInputActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ultramarine"
                android:theme="?actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/txtAppBarInputRoom"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtHeadingPhotoRoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <ImageView
            android:id="@+id/ivRoomPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/preview_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtHeadingRoomName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPreview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRoomName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:startIconDrawable="@drawable/fluent_conference_room_28_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/edtRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="name" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txtHeadingRoomDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputRoomName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRoomDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/txtRoomDescription"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/greys"
        android:drawableStart="@drawable/mingcute_camera_fill"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txt_button_camera"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textInputDescription"
        app:layout_constraintTop_toBottomOf="@+id/textInputDescription" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/greys"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txt_button_gallery"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_camera"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toTopOf="@+id/button_camera"
        app:layout_constraintEnd_toStartOf="@id/button_add"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:text="@string/txt_button_add"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputDescription"
        app:layout_constraintTop_toTopOf="@+id/button_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>