<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:src="@drawable/preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/txtItemCode"
            android:textSize="16sp"
            android:textColor="@color/ultramarine"
            app:layout_constraintStart_toEndOf="@+id/iv_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:background="@drawable/horizontal_dotted"
            android:layerType="software"
            app:layout_constraintStart_toStartOf="@+id/tv_item_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_code" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/textItemName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_code"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_item_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/textItemStock"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/textItemPrice"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_stock" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>