<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.room.RoomFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/appbar_background"
                android:theme="?actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="25dp"
                android:text="@string/hello"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvHello"
                app:layout_constraintTop_toBottomOf="@+id/tvHello" />

            <TextView
                android:id="@+id/tvHeadingHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/txtheadingappbar"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/tvHello"
                app:layout_constraintTop_toBottomOf="@+id/username" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:elevation="10dp"
                app:cardUseCompatPadding="true"
                android:background="@drawable/searchview_circle"
                app:layout_constraintTop_toBottomOf="@+id/tvHeadingHome"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:queryHint="@string/searchItem"
                    app:iconifiedByDefault="false"/>

            </com.google.android.material.card.MaterialCardView>


            <ImageButton
                android:id="@+id/imgLogout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
                android:src="@drawable/streamline_logout_1_solid"
                android:background="@null"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRuangan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        tools:listitem="@layout/items_room"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/ultramarine"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_post" />

</androidx.constraintlayout.widget.ConstraintLayout>